# backend-engineering-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/unbabel_cli/: __init__.py  unbabel_cli.py
tests/: test_unbabel_cli.py
tests/data/: test-input-event-at-boundary.jsonl  test-input-translations-failed.jsonl
